--- a/rpi/.env.example
+++ b/rpi/.env.example
@@ -1,11 +1,8 @@
-## Example .env for rpi/app.py
-# Path to serial device (adjust after connecting Atom printer)
-TTY_DEVICE=/dev/ttyUSB0
-# Baud rate for the Atom printer
-BAUD=115200
-# Port to run FastAPI on
+# FastAPI server configuration for Raspberry Pi deployment
 API_PORT=8000
-# Optional: host IP
-API_HOST=0.0.0.0
-# Logging level (info/debug)
-LOG_LEVEL=info
+# Serial device that the Atom Printer is connected to
+TTY_DEVICE=/dev/ttyUSB0
+# ESC/POS baud rate
+BAUD=115200
+# Optional path to a TTF/OTF font when rendering raster receipts
+FONT_PATH=/home/pi/.local/share/fonts/NotoSansCJKjp-Regular.otf
