--- a/rpi/.env.example
+++ b/rpi/.env.example
@@ -1,7 +1,7 @@
 # FastAPI server configuration for Raspberry Pi deployment
 API_PORT=8000
 # Serial device that the Atom Printer is connected to
-TTY_DEVICE=/dev/ttyUSB0
+TTY_DEVICE=/dev/usb/lp0
 # ESC/POS baud rate
 BAUD=115200
 # Optional path to a TTF/OTF font when rendering raster receipts
